--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section class="inner">
       <div class="img">
         <!-- Imagen en la raíz del repo -->
-        <img src="./saga-vuelve.jpg" alt="La Saga Vuelve" />
+        <img src="./saga-vuelve.png" alt="La Saga Vuelve" />
       </div>
 
       <div>
