--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <a class="btn"
            href="https://open.spotify.com/playlist/1ylnFl2AbyTPG9ppzfTzxa"
            target="_blank" rel="noopener"
-           onclick="try{fbq('trackCustom','GuardarPlaylist');}catch(e){}">
+           onclick="try{fbq('track','Lead');}catch(e){}">
           Guardá la playlist en Spotify →
         </a>
 
