--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <h1>Sumate a la Lista del Reencuentro</h1>
 
         <p>
-          Una lista simple para avisos importantes de <strong>La Saga Vuelve</strong>.
+          Una lista simple para avisos importantes de <strong>La Saga </strong>.
         </p>
 
         <ul class="bullets">
