--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>La Saga Vuelve — Lista del Reencuentro</title>
+  <title>La Saga — Lista del Reencuentro</title>
 
   <meta name="description" content="Sumate a la Lista del Reencuentro de La Saga para enterarte primero del show que estamos planeando para comienzos del 2026. Guardá también la playlist oficial." />
   <meta name="theme-color" content="#0b0f14" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="La Saga Vuelve — Lista del Reencuentro" />
+  <meta property="og:title" content="La Saga — Lista del Reencuentro" />
   <meta property="og:description" content="Sumate para enterarte primero del show que estamos planeando para comienzos del 2026. Guardá también la playlist oficial." />
   <meta property="og:type" content="website" />
   <!-- Recomendación: reemplazar TU-DOMINIO por tu GitHub Pages o dominio real -->
@@ -340,7 +340,7 @@
     <section class="inner">
       <div class="img">
         <img src="./saga-vuelve.png"
-             alt="La Saga Vuelve"
+             alt="La Saga"
              width="1200" height="1200"
              loading="eager" />
       </div>
@@ -351,7 +351,7 @@
         <h1>Sumate a la Lista del Reencuentro</h1>
 
         <p>
-          Una lista simple para avisos importantes de <strong>La Saga </strong>.
+          Una lista simple para avisos importantes de <strong>La Saga</strong>.
         </p>
 
         <ul class="bullets">
